// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectList should render a select list with 3 items 1`] = `
.c5 {
  height: 1.5625rem;
  width: 1.5625rem;
  margin-right: 0.625rem;
  cursor: pointer;
}

.c2 {
  background: none;
  text-align: left;
  font-size: 1rem;
  line-height: 1.25rem;
  padding: 1.125rem 0.625rem;
  color: #FFF;
  border: 1px solid #8C8D8F;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: calc(100% - 1.375rem);
}

.c2:hover,
.c2:active {
  border-color: #FFF;
  outline: none;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: 1px solid #8C8D8F;
}

.c2-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2[type='number'] {
  -moz-appearance: textfield;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 11.125rem;
  -ms-flex: 0 1 11.125rem;
  flex: 0 1 11.125rem;
  border: 1px solid #8C8D8F;
  height: 29.875rem;
  padding: 0 0.625rem;
  background: #161B20;
  border-radius: 0.375rem;
}

.c1 {
  font-size: 1rem;
  line-height: 1.375rem;
  color: #FFF;
  margin: 1.25rem 0.75rem 0.75rem;
}

.c3 {
  overflow-y: auto;
  padding: 0;
}

.c3::-webkit-scrollbar,
.c3::-webkit-scrollbar-track,
.c3::-webkit-scrollbar-thumb {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 1rem;
  color: #FFF;
  line-height: 1.375rem;
  margin: 0.625rem 0;
  border-radius: 0.375rem;
  padding: 0.75rem 0.625rem;
  border: 1px solid transparent;
}

<div
  class="c0"
  data-testid="custom"
>
  <div
    class="c1"
  >
    SELECT 
    NETWORK
  </div>
  <input
    class="c2"
    lang="en"
    placeholder="Network Name"
    type="text"
    value=""
  />
  <ul
    class="c3"
  >
    <li
      class="c4"
      value="NETWORK"
    >
      <img
        alt="ETH"
        class="c5"
        src="ETH.png"
      />
      ETH
    </li>
    <li
      class="c4"
      value="NETWORK"
    >
      <img
        alt="BTC"
        class="c5"
        src="BTC.png"
      />
      BTC
    </li>
    <li
      class="c4"
      value="NETWORK"
    >
      <img
        alt="USDT"
        class="c5"
        src="USDT.png"
      />
      USDT
    </li>
  </ul>
</div>
`;

exports[`SelectList should render an empty select list 1`] = `
.c2 {
  background: none;
  text-align: left;
  font-size: 1rem;
  line-height: 1.25rem;
  padding: 1.125rem 0.625rem;
  color: #FFF;
  border: 1px solid #8C8D8F;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: calc(100% - 1.375rem);
}

.c2:hover,
.c2:active {
  border-color: #FFF;
  outline: none;
}

.c2:focus-visible {
  outline-offset: 2px;
  outline: 1px solid #8C8D8F;
}

.c2-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2[type='number'] {
  -moz-appearance: textfield;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 1 11.125rem;
  -ms-flex: 0 1 11.125rem;
  flex: 0 1 11.125rem;
  border: 1px solid #8C8D8F;
  height: 29.875rem;
  padding: 0 0.625rem;
  background: #161B20;
  border-radius: 0.375rem;
}

.c1 {
  font-size: 1rem;
  line-height: 1.375rem;
  color: #FFF;
  margin: 1.25rem 0.75rem 0.75rem;
}

<div
  class="c0"
  data-testid="custom"
>
  <div
    class="c1"
  >
    SELECT 
    NETWORK
  </div>
  <input
    class="c2"
    lang="en"
    placeholder="Network Name"
    type="text"
    value=""
  />
  <div
    class="c1"
  >
    Please choose network.
  </div>
</div>
`;
